# hackernews-api

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
hackernews_api/: api.py
tests/: test_api_get_main_stories_by_day.py  test_api_get_story.py
tests/assets/api_get_main_stories_by_day_0/: expected_return_value.pickle  hn_source_code_p1.html  hn_source_code_p2.html  hn_source_code_p3.html
tests/assets/api_get_story_external_0/: api_response.json  expected_return_value.pickle  hn_source_code.html
tests/assets/api_get_story_internal_0/: api_response.json  expected_return_value.pickle  hn_source_code.html
