[tool.poetry]
name = "hackernews-api"
version = "0.1.0"
description = ""
authors = ["Raffael"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
click = "^7.1.2"
pydantic = "^1.6.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
